# reroute

./: .gitignore  404.html  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  FEATURES.txt  README.md  demo_checkbox_style.py  index.html  pyproject.toml  run_tests.py  setup.py  sitemap.xml  test_update_notification.py  versions.json
.github/: PYPI_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  publish-pypi.yml  publish.yml  test.yml
TUTORIAL_ROADMAP/: index.html
adapters/: index.html
adapters/django/: index.html
adapters/fastapi/: index.html
api/: index.html
api/adapters/: index.html
api/config/: index.html
api/decorators/: index.html
api/params/: index.html
api/routebase/: index.html
changelog/: index.html
cli/: index.html
cli/commands/: index.html
cli/scaffolding/: index.html
cli/templates/: index.html
cli/templates_requirements_updated/: index.html
contributing/: index.html
deployment/: index.html
deployment/docker/: index.html
deployment/production/: index.html
docs/: mkdocs.yml
docs/en/: TUTORIAL_ROADMAP.md  start-here.md
examples/: .env.example  FEATURE_TEST_GUIDE.md  README.md  crud_example.py  fastapi_app.py  index.html  openapi_test_spec.yaml  test_app_setup.py  test_fastapi.py  test_router.py  test_websocket_client.py  version_gating_example.py  websocket_example.py  websocket_tests.http
examples/authentication/: index.html
examples/basic-crud/: index.html
examples/caching/: index.html
examples/database/: index.html
examples/fastapi-example/: index.html
examples/parameter_injection/: README.md  main.py  requirements.txt  test.http
examples/rate-limiting/: index.html
getting-started/: index.html
getting-started/first-route/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/class-routes/: index.html
guides/configuration/: index.html
guides/cors/: index.html
guides/decorators/: index.html
guides/error-handling/: index.html
guides/file-routing/: index.html
guides/lifecycle-hooks/: index.html
guides/security/: index.html
guides/testing/: index.html
guides/troubleshooting/: index.html
migrations/: env.py
reroute/: __init__.py  __main__.py  config.py  decorators.py  logging.py  params.py  security.py  utils.py
reroute/adapters/: __init__.py  fastapi.py  flask.py
reroute/cli/: __init__.py  _template_loader.py  commands.py  history.py  main.py  model_templates.py  update_checker.py  utils.py
reroute/core/: __init__.py  base.py  loader.py  router.py  websocket.py
reroute/db/: __init__.py  connection.py  models.py
reroute/openapi/: __init__.py  generator.py  model_generator.py  parser.py
reroute/security/: __init__.py  crypto.py  headers.py  validation.py
reroute/utils/: version_gating.py
search/: search_index.json
start-here/: index.html
tests/: conftest.py  security_tests.http  test_adapter_params.py  test_async_handlers.py  test_comprehensive_security.py  test_config_env.py  test_cookiecutter_templates.py  test_openapi_generator.py  test_openapi_parser.py  test_params.py  test_secret_key_security.py  test_security.py  test_security_crypto.py  test_security_fixes.py  test_security_validation.py  test_template_injection_fixes.py  test_timeout_decorator.py  test_validate_decorator.py  test_websocket.py  test_websocket_unittest.py
tests/integration/: security_integration_tests.http
tutorial/: index.html
(+87 files in other folders)
