[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reroute"
version = "0.2.4"
description = "File-based routing for Python backend frameworks (FastAPI, Flask)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "C B Sajan", email = "cloud.ckhathri@gmail.com"}
]
keywords = ["fastapi", "flask", "routing", "file-based", "web-framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Framework :: Flask",
]

dependencies = [
    "click>=8.0.0",
    "InquirerPy>=0.3.0",
    "jinja2>=3.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
flask = ["flask>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
reroute = "reroute.cli.main:cli"

[project.urls]
Homepage = "https://github.com/cbsajan/reroute"
Repository = "https://github.com/cbsajan/reroute"
Documentation = "https://cbsajan.github.io/reroute-docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["reroute*"]

[tool.setuptools.package-data]
"reroute.cli.templates" = [
    "**/*.j2",
    "**/*.md"
]
