[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reroute"
version = "0.2.5"
description = "File-based routing for Python backend frameworks (FastAPI)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "C B Sajan", email = "cloud.ckhathri@gmail.com"}
]
keywords = ["fastapi", "routing", "file-based", "web-framework", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
]

dependencies = [
    "click>=8.0.0",
    "InquirerPy>=0.3.0",
    "jinja2>=3.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
flask = ["flask>=2.0.0"]
security = [
    "argon2-cffi>=23.0.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.0.0",
    "bleach>=6.0.0",
]
openapi = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]
websocket = [
    "websockets>=11.0",
    "python-socketio>=5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "sqlalchemy>=2.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
reroute = "reroute.cli.main:cli"

[project.urls]
Homepage = "https://github.com/cbsajan/reroute"
Repository = "https://github.com/cbsajan/reroute"
Documentation = "https://cbsajan.github.io/reroute-docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["reroute*"]

[tool.setuptools.package-data]
"reroute.cli.templates" = [
    "**/*.j2",
    "**/*.md"
]
